--- a/front/src/components/Post/style.css
+++ b/front/src/components/Post/style.css
@@ -182,3 +182,26 @@ body{
     left: 0;
     z-index: 10;
 }
+
+  
+  .btn-xlarge{
+    position: relative;
+    vertical-align: center;
+    /*width: 100%;*/
+    height: 100x;
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    border: 0;
+
+    cursor: pointer;
+
+  }
+  .btn-xlarge:active {
+    top: 2px;
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+ 
